Implemented ai-scanning